# tauri-shadcn-template

./: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
fastapi/app/: main.py  pyproject.toml
fastapi/app/app/: app.py
src/: main.tsx  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/config/: algo_settings.toml  hardware_settings.toml  recipes_settings.toml  run_settings.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cameras/: hik_camera.rs  mod.rs
src-tauri/src/config/: config.rs  global_settings.toml  hardware_settings.toml  recipes_settings.toml  run_settings.toml
src-tauri/src/database/: surrealdb.rs
src-tauri/src/plc/: mod.rs  modbusTCP.rs
src-tauri/src/recipes/: mod.rs
src-tauri/src/record/: mod.rs
src-tauri/src/sensors/: cf3000.rs  cf3000_bindings.rs  mod.rs
src-tauri/src/sidecar/: sidecar.rs
src/components/: file-sidebar.tsx  profile-dropdown.tsx
src/components/layout/: header.tsx  main.tsx  nav-user.tsx
src/components/layout/data/: sidebar-data.ts
src/features/analytics/: index.tsx
src/features/dashboard/: index.tsx
src/features/dashboard/components/: overview.tsx  resultshow.tsx  startstop.tsx  stateandlogs.tsx
src/features/monaco/: index.tsx
src/features/node/: index.tsx
src/features/noder/: index.tsx
src/features/project/: index.tsx
src/features/records/: index.tsx
src/features/settings/: index.tsx
src/features/settings/camera/: account-form.tsx
src/features/settings/detection/: account-form.tsx
src/features/settings/plc/: account-form.tsx
src/features/settings/robot/: account-form.tsx  index.tsx
src/features/settings/software/: account-form.tsx
src/features/tasks/: index.tsx
src/routes/_authenticated/analytics/: route.lazy.tsx
src/routes/_authenticated/monaco/: index.lazy.tsx
src/routes/_authenticated/node/: index.lazy.tsx
src/routes/_authenticated/noder/: index.lazy.tsx
src/routes/_authenticated/records/: route.lazy.tsx
src/routes/_authenticated/settings/: camera.lazy.tsx  detection.lazy.tsx  index.lazy.tsx  plc.lazy.tsx  robot.lazy.tsx  sensor.lazy.tsx  software.lazy.tsx
src/stores/: dashboardStore.ts  softwareSettingsStore.ts
