[package]
name = "tauri-shadcn-template"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_shadcn_template_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
env_logger = "0.9"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# tauri-plugin-window = "2.0.0-alpha.2"
tauri-plugin-os = "2.2.0"
tauri-plugin-shell = "2"
tokio = { version = "1.43.0", features = ["full", "macros", "mio", "rt-multi-thread"] }
surrealdb = "2.2.1"
